# AEGIS

./: .gitignore  LICENSE  README.md  index.html  makefile  pyproject.toml
assets/css/: video-comparison-slider.css
assets/js/: index.js  video-comparison-slider.js
docs/: INSTALLATION.md
notebooks/: GA_flame.ipynb  build_reference_database.ipynb  render_dataset.ipynb
scripts/: download_datasets.sh  download_models.sh  evaluate.py  mask_avatar.py  run_experiments.sh
src/aegis/: __init__.py  config.py  splat.py
src/aegis/core/: __init__.py  helpers.py  model.py  pipeline.py
src/aegis/evaluation/: datasets.py  evaluators.py  stores.py
src/aegis/models/: __init__.py  adaface.py  arcface.py  base.py
src/aegis/utils/: __init__.py  files.py  plot.py
